reviews/reviewsindividual.css
/* ... */
@media screen and (max-width: 1000px){
    

  .container-similarreviews{
    flex-direction: column; align-items: center;
  }
  .similarreviews-img{width: 16rem; height: 16rem;}

}

@media screen and (max-width: 340px){
  
 
}

/*END - MAIN CONTENT*/


/*spotify iframe - get with album page>share>embed>copy*/

.spotify-iframe{
  width: 80%;
}
@media screen and (max-width: 550px){.spotify-iframe{height: 22rem;}}

    @media screen and (max-width: 450px){.spotify-iframe{zoom: .8;}}
    @media screen and (min-width: 1400px){.spotify-iframe{max-width: 1200px;zoom: 1.1;}}
    @media screen and (min-width: 1900px){.spotify-iframe{zoom: 1.4;}}
    @media screen and (min-width: 2500px){.spotify-iframe{zoom: 1.7;}}
    @media screen and (min-width: 3500px){.spotify-iframe{zoom: 2;}}
/*footer*/
footer{z-index: 1; display: flex; justify-content: center; align-items: center; width: 100%; max-width: 100vw;}
  .footer {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: row;
  margin: 0;
  gap: 1rem;

  list-style-type: none;
  background-color: #12171d9d;
  padding: 1rem;
  border-radius: 1rem;
  }
      @media screen and (max-width: 850px){
      footer{display: grid; 
          grid-template-columns: repeat(1, 100%);     grid-template-rows: auto auto; 
          grid-template-areas: 
              "internals"
              "socials";    
          }
          #footer-internals{grid-area: internals;
              display: flex;
              align-items: center;
              justify-content: center;
              flex-direction: row;
              margin: 0;
              gap: 1rem;           
          
              list-style-type: none;
              background-color: #12171d9d;
              padding: 1rem;
              border-radius: 1rem;}
          #footer-socials{grid-area: socials;
              display: flex;
              align-items: center;
              justify-content: center;
              flex-direction: row;
              margin: 0;
              gap: 1rem;             
          
              list-style-type: none;
              background-color: #12171d9d;
              padding: 1rem;
              border-radius: 1rem;
          }
      }
          .footer-item{list-style-type: none;}
          .footer-link{
          z-index: 12; 
          font-weight: 500;
          text-decoration: none;
          }
          footer img {height: 1rem;}

